--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,6 @@
 name: Go
 on: [push, pull_request]
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -24,10 +23,9 @@ jobs:
 
       - name: Get dependencies and run test
         run: |
-          go test ./...
+          go test -race ./...
 
       - name: Build
-        if: startsWith(github.ref, 'refs/tags/')
         env:
           NAME: clash
           BINDIR: bin
