ci: revert docker workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,16 +15,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
-
       - name: Set up docker buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: crazy-max/ghaction-docker-buildx@v3
         with:
-          version: latest
+          buildx-version: latest
+          qemu-version: latest
 
       - name: Docker login
         env:
@@ -38,23 +34,16 @@ jobs:
         run: |
           docker buildx build --output "type=image,push=true" --platform=linux/amd64,linux/arm/v7,linux/arm64 --tag whtsky/clash:dev .
 
-      - name: Get all docker tags
+      - name: Replace tag without `v`
         if: startsWith(github.ref, 'refs/tags/')
         uses: actions/github-script@v3
-        id: tags
+        id: version
         with:
           script: |
-            const ref = `${context.payload.ref.replace(/\/?refs\/tags\//, '')}`
-            const tags = [
-              'dreamacro/clash:latest',
-              `dreamacro/clash:${ref}`,
-              'ghcr.io/dreamacro/clash:latest',
-              `ghcr.io/dreamacro/clash:${ref}`
-            ]
-            return tags.join(',')
+            return context.payload.ref.replace(/\/?refs\/tags\/v/, '')
           result-encoding: string
 
-      - name: Build release and push
+      - name: Docker buildx image and push on release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           docker buildx build --output "type=image,push=true" --platform=linux/amd64,linux/arm/v7,linux/arm64 --tag whtsky/clash:${{steps.version.outputs.result}} .
